// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test <SocialLink /> should match snapshot for external link 1`] = `
<div>
  <a
    class="socialLink"
    href="https://example.com"
    rel="noopener"
    target="_blank"
  >
    <span
      data-testid="icon"
    >
      Icon
    </span>
     
    Example
  </a>
</div>
`;

exports[`test <SocialLink /> should match snapshot for internal link 1`] = `
<div>
  <a
    class="socialLink"
    href="/about"
  >
    <span
      data-testid="icon"
    >
      Icon
    </span>
     
    About
  </a>
</div>
`;
